--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,9 @@
         <link rel="stylesheet" href="styles/popup.css">
     </head>
     <body>
-        <h1>Card Tabber - Current List</h1>
+        <div class="header">
+            <h1>Card Tabber - Current List</h1>
+        </div>
         <div id="deck-list"></div>
         <script src="scripts/popup.js"></script>
     </body>
