added functionality buttons and design changes

--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,12 @@
             <h1>Card Tabber - Current List</h1>
         </div>
         <div id="deck-list"></div>
-        <script src="scripts/popup.js"></script>
+        <div id="deck-list-footer">
+            <button class="deck-list-button" id="copy-deck-list">Copy Deck List</button>
+            <button class="deck-list-button" id="download-deck-list">Download TXT</button>
+            <button class="deck-list-button" id="clear-deck-list"> Clear All </button>
+            
+        </div>
+        <script type="module" src="scripts/popup.js"></script>
     </body>
 </html>
