--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <div class="header">
-            <h1>Card Tabber - Current List</h1>
+            <img src="res/icons/icon-48.png" alt="Card Tabber Logo" class="logo">
+            <h1>Current List</h1>
         </div>
         <div id="deck-list"></div>
         <div id="deck-list-footer">
